# serverless-performance-evaluation

./: README.md
functions/openwhisk/aes/: create_action.sh  input.json  test_action.sh
functions/openwhisk/chameleon/: __main__.py  create_action.sh  input.json  test_action.sh
functions/openwhisk/float/: create_action.sh  test_action.sh
functions/openwhisk/image-thumbnail/: Cargo.toml  create_action.sh  (+3 more)
functions/spin/image-thumbnail/: Cargo.toml  spin.toml
functions/spin/image-thumbnail/src/: lib.rs
k8s_scripts/cleanup/: README.md  clean_network_interfaces.sh  network_restart.sh  remove_cluster.sh  remove_node.sh
k8s_scripts/install/: README.md  installation_script.sh  label_ow_nodes.sh  label_workers.sh  start_cluster.sh
process_workload/: README.md
process_workload/keep_alive_plotting/: README.md  aes_experiments.ipynb  aes_processing.ipynb  chameleon_experiments.ipynb  chameleon_processing.ipynb  float_experiments.ipynb  float_processing.ipynb  image-thumbnail_experiments.ipynb  image-thumbnail_processing.ipynb  matmul_experiments.ipynb  matmul_processing.ipynb  whatlang_experiments.ipynb  whatlang_processing.ipynb
process_workload/load_plotting/: README.md  float_experiments.ipynb  float_processing.ipynb
run_workload/: README.md
run_workload/openwhisk/: README.md  execute_keep_alive_exp.sh  execute_load_exp.sh  fetch_activations.py  measure_container_response_time.py  requirements.txt  run_container_measurement.sh  run_container_workload.py
run_workload/spin/: README.md  execute_load_exp.sh  measure_function_time.py  run_wasm_workload.py
(+187 files in other folders)
